--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^1.3.4",
+    "lucide-react": "^0.539.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "task-manager": "file:..",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
